@@ -1,12 +1,0 @@
-$schema: http://json-schema.org/draft-04/schema#
-description: A description specified in multiple languages
-type: object
-properties:
-  #nl, fr, de are predefined, but additional languages can be added
-  nl:
-    type: string
-  fr:
-    type: string
-  de:
-    type: string
-  
