@@ -1,5 +1,0 @@
-id: https://www.gcloud.belgium.be/rest/schemas/person/identifier/v1beta/Ssin
-$schema: http://json-schema.org/draft-04/schema#
-description: "Social Security Identification Number issued by the National Register or CBSS"
-type: string
-pattern: \d{11}
