@@ -1,0 +1,10 @@
+swagger: "2.0"
+info:
+  title: data types for person identifiers
+  version: v1beta
+paths: {}
+definitions:
+  Ssin:
+    description: "Social Security Identification Number issued by the National Register or CBSS"
+    type: string
+    pattern: \d{11}
