@@ -1,4 +1,7 @@
 == Changelog
+* 2018-12-20
+** modified guidelines on organization of reusable data types in Swagger files instead of multiple smaller JSON schema files
+** gCloud JSON Schemas refactored to this new file structure
 * 2018-11-26
 ** add SelfLink type in <<Hypermedia controls>>
 ** recommend American English for <<JSON>> property names and <<JSON Schema>> data types
